Update for Java 17, spring 3, spring-security 6 (#23)
* update class imports used for java 17
* fix security chain issues