@@ -5,23 +5,26 @@ import static org.springframework.security.config.http.SessionCreationPolicy.STA
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.context.annotation.Bean;
-import org.springframework.security.config.annotation.authentication.builders.AuthenticationManagerBuilder;
+import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfigurerAdapter;
+import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.AnonymousAuthenticationFilter;
 import org.springframework.security.web.authentication.HttpStatusEntryPoint;
 import org.springframework.security.web.authentication.SimpleUrlAuthenticationSuccessHandler;
 import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
+import org.springframework.security.web.csrf.CsrfTokenRequestAttributeHandler;
 import org.springframework.security.web.util.matcher.AntPathRequestMatcher;
 import org.springframework.security.web.util.matcher.OrRequestMatcher;
 import org.springframework.security.web.util.matcher.RequestMatcher;
 
 /** Add authentication based on the token stored with the application */
 @EnableWebSecurity
-public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
+@Configuration
+public class SecurityConfiguration {
 	private static final List<String> protectedUrlStrings = new ArrayList<String>() {
 		{
 			add("/SceneStatus");
@@ -29,27 +32,17 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 			add("/enableTokenFetch/**");
 			add("/SceneStatusSmart");
 			add("/swagger-ui/**");
+			add("/v3/**");
 		}
 	};
 
 	private static final RequestMatcher kProtectedUrls = new OrRequestMatcher(protectedUrlStrings.stream()
 			.map(AntPathRequestMatcher::new)
-			.collect(Collectors.toList())
+			.toList()
 			.toArray(new AntPathRequestMatcher[0]));
 
-	private TokenAuthenticationProvider provider;
-
-	public SecurityConfiguration(TokenAuthenticationProvider provider) {
-		this.provider = provider;
-	}
-
-	@Override
-	protected void configure(final AuthenticationManagerBuilder auth) {
-		auth.authenticationProvider(provider);
-	}
-
-	@Override
-	protected void configure(HttpSecurity http) throws Exception {
+	@Bean
+	public SecurityFilterChain filterChain(HttpSecurity http, TokenAuthenticationFilter filter) throws Exception {
 		CookieCsrfTokenRepository csrfRepo = CookieCsrfTokenRepository.withHttpOnlyFalse();
 		csrfRepo.setSecure(true);
 		csrfRepo.setCookieMaxAge(60 * 60); // Store cookie for 1 min
@@ -59,12 +52,12 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 				.exceptionHandling()
 				.defaultAuthenticationEntryPointFor(new HttpStatusEntryPoint(UNAUTHORIZED), kProtectedUrls)
 				.and()
-				.authenticationProvider(provider)
-				.addFilterBefore(restAuthenticationFilter(), AnonymousAuthenticationFilter.class)
-				.authorizeRequests()
-				.antMatchers(protectedUrlStrings.toArray(new String[0]))
-				.authenticated()
-				.and()
+				.authenticationProvider(new TokenAuthenticationProvider())
+				.addFilterBefore(filter, AnonymousAuthenticationFilter.class)
+				.authorizeHttpRequests(auth -> {
+					auth.requestMatchers(protectedUrlStrings.toArray(new String[0]))
+							.authenticated();
+				})
 				.formLogin()
 				.disable()
 				.httpBasic()
@@ -72,12 +65,19 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 				.logout()
 				.disable()
 				.csrf()
+				.csrfTokenRequestHandler(csrfTokenRequestAttributeHandler())
 				.csrfTokenRepository(csrfRepo);
+		return http.build();
 	}
 
 	@Bean
-	TokenAuthenticationFilter restAuthenticationFilter() throws Exception {
-		return new TokenAuthenticationFilter(kProtectedUrls, authenticationManager(), successHandler());
+	public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+		return authConfig.getAuthenticationManager();
+	}
+
+	@Bean
+	TokenAuthenticationFilter restAuthenticationFilter(HttpSecurity http, AuthenticationManager auth) throws Exception {
+		return new TokenAuthenticationFilter(kProtectedUrls, auth, successHandler());
 	}
 
 	@Bean
@@ -85,5 +85,12 @@ public class SecurityConfiguration extends WebSecurityConfigurerAdapter {
 		final SimpleUrlAuthenticationSuccessHandler aSuccessHandler = new SimpleUrlAuthenticationSuccessHandler();
 		aSuccessHandler.setRedirectStrategy((theRequest, theResponse, theUrl) -> {});
 		return aSuccessHandler;
+	}
+
+	@Bean
+	CsrfTokenRequestAttributeHandler csrfTokenRequestAttributeHandler() {
+		CsrfTokenRequestAttributeHandler handler = new CsrfTokenRequestAttributeHandler();
+		handler.setCsrfRequestAttributeName(null);
+		return handler;
 	}
 }
